# ConDaLF-Backend

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
config/: relay_conf
python/: user_script.py
python/condalf/: influx.py  senml_parser.py
scripts/: deploy.sh  start_backend.sh  start_relay.sh  start_relay_ipv6.sh  test.sh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/ConDaLF-Backend/: CMakeLists.txt  main.cpp
src/apps/ConDaLF-Backend/python/: CMakeLists.txt  python_integration.cpp  python_integration.hpp
src/apps/ConDaLF-Backend/service/: CMakeLists.txt
src/apps/ConDaLF-Backend/service/relay/: CMakeLists.txt  message_queue.cpp  message_queue.hpp  relay.cpp  relay.hpp  session.cpp  session.hpp  session_manager.cpp  session_manager.hpp
src/apps/ConDaLF-Backend/service/server/: CMakeLists.txt  server.cpp  server.hpp
src/common/: CMakeLists.txt
src/common/coap/: CMakeLists.txt  coap.cpp  coap.hpp
src/common/config/: CMakeLists.txt  parser.cpp  parser.h
src/common/logging/: CMakeLists.txt  logging.cpp  logging.h
src/common/service/: CMakeLists.txt  service.cpp  service.hpp
src/testing/: CMakeLists.txt  base.h  testing.cpp
